--- a/index.html
+++ b/index.html
@@ -95,11 +95,124 @@
         <div class="meet-client-details">
           <h2 class="section-header meet-client-header">Meet Our Super Clients</h2>
           <p class="section-description meet-client-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-          <button class="secondary-btn">Show All</button>
+          <button class="secondary-btn"><p class="btn-text">Show All</p></button>
         </div>
-        <div></div>
+        <figure class="back-shadow"><img src="./images/bg_cup.png" alt=""></figure>
+        <div class="custoers-review">
+          <div class="individual-review individual-review-same">
+            <p class="section-description individual-review-description">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h5 class="individual-review-subtitle">Ilham Yuda</h5>
+            <p class="section-description">Businessman</p>
+            <figure class="client-img-container">
+              <img src="./images/client.png" alt="">
+            </figure>
+          </div>
+          <div class="individual-review individual-review-same">
+            <p class="section-description individual-review-description">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h5 class="individual-review-subtitle">Ilham Yuda</h5>
+            <p class="section-description">Businessman</p>
+            <figure class="client-img-container">
+              <img src="./images/client.png" alt="">
+            </figure>
+          </div>
+          <div class="individual-review individual-review-diff ">
+            <p class="section-description individual-review-description">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h5 class="individual-review-subtitle">Ilham Yuda</h5>
+            <p class="section-description">Businessman</p>
+            <figure class="client-img-container">
+              <img src="./images/client.png" alt="">
+            </figure>
+            <figure class="individual-review-extra">
+              <img src="./images/circles.png" alt="">
+            </figure>
+          </div>
+        </div>
+      </section>
+      <section class="news-event section-wide">
+        <div class="news-event-header">
+          <h3 class="section-header">News & Events</h3>
+          <p class="section-description news-event-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+        </div>
+        <div class="news-container">
+          <div class="news-card">
+            <img src="./images/news-1.png" alt="">
+            <p class="section-description date">Feb 05, 2027</p>
+            <h4 class="news-title">Collecting 8 points for discount</h4>
+            <p class="section-description">There are many variations of passages of Lorem Ipsum available.</p>
+            <a class="learn-more" href="#"><p>Learn More</p></a>
+          </div>
+          <div class="news-card">
+            <img src="./images/news-2.png" alt="">
+            <p class="section-description date">Feb 05, 2027</p>
+            <h4 class="news-title">Collecting 8 points for discount</h4>
+            <p class="section-description">There are many variations of passages of Lorem Ipsum available.</p>
+            <a class="learn-more" href="#"><p>Learn More</p></a>
+          </div>
+          <div class="news-card">
+            <img src="./images/news-3.png" alt="">
+            <p class="section-description date">Feb 05, 2027</p>
+            <h4 class="news-title">Collecting 8 points for discount</h4>
+            <p class="section-description">There are many variations of passages of Lorem Ipsum available.</p>
+            <a class="learn-more" href="#"><p>Learn More</p></a>
+          </div>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="section-wide footer-contents">
+        <div class="footer-head">
+          <figure>
+            <img src="./images/Frame.png" alt="">
+          </figure>
+          <div class="ready-to-start">
+            <p class="ready">Ready to get strated?</p>
+            <button class="primary-btn">Get Started</button>
+          </div>
+        </div>
+        <div class="footer-content">
+          <div class="links">
+            <div>
+              <p>Quick Links</p>
+              <ul>
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Insurance</li>
+                <li>Privacy Policy</li>
+              </ul>
+            </div>
+            <div>
+              <p>Our Service</p>
+              <ul>
+                <li>Life Insurance</li>
+                <li>Car Insurance</li>
+                <li>Health Insurance</li>
+                <li>House Insurance</li>
+              </ul>
+            </div>
+            <div>
+              <p>Help</p>
+              <ul>
+                <li>FAQs</li>
+                <li>Contact Us</li>
+              </ul>
+            </div>
+          </div>
+          <div class="subscribe">
+            <h3 class="subscribe-tile">Subscribe to our<br>newsletter</h3>
+            <div class="email-iput">
+              <p>Email addresss</p>
+              <button class="primary-btn">></button>
+            </div>
+            <hr>
+            <div class="social">
+              <i class="fa-brands fa-facebook-f"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-instagram"></i>
+            </div>
+          </div>
+        </div>
+        <div class="copy">
+          <p class="section-description">© 2027 UIDesign.to - All rights reserved.</p>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
